--- a/src/views/Kanban/Kanban.module.css
+++ b/src/views/Kanban/Kanban.module.css
@@ -1,7 +1,7 @@
 .kanban {
   display: flex;
   gap: 1rem;
-  height: 100%;
+  max-height: 100%;
 }
 .kanban > div {
   flex: 1;
